Moving gpuSetup to separate script, changing submodules url from ssh to https, using "--noconfirm" flag

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "scripts/backupScript"]
 	path = scripts/backupScript
-	url = git@github.com:bzgec/backupScript.git
+	url = https://github.com/bzgec/backupScript.git
 [submodule "scripts/nvim"]
 	path = scripts/nvim
-	url = git@github.com:bzgec/nvim.git
+	url = https://github.com/bzgec/nvim.git
 [submodule "wallpapers-collection"]
 	path = wallpapers-collection
-	url = git@github.com:bzgec/wallpapers-collection.git
+	url = https://github.com/bzgec/wallpapers-collection.git
