Adding XF86AudioRaiseVolume and XF86AudioLowerVolume shortcuts, fixing redshift to display normal during the day

--- a/dotfiles/.config/redshift/redshift.conf
+++ b/dotfiles/.config/redshift/redshift.conf
@@ -1,8 +1,12 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=5700
-temp-night=3000
+; The neutral temperature is 6500K. Using this value will not change the color
+; temperature of the display. Setting the color temperature to a value higher
+; than this results in more blue light, and setting a lower value will result in
+; more red light.
+temp-day=6500
+temp-night=2500
 
 ; Disable the smooth fade between temperatures when Redshift starts and stops.
 ; 0 will cause an immediate change between screen temperatures.
