Adding suspend on inactivity, suspend-then-hibernate still doesn't work - work in progress

--- a/10-monitor.conf
+++ b/10-monitor.conf
@@ -5,3 +5,9 @@ Section "Monitor"
     Option "PreferredMode" "1920x1080"
     Option "Primary" "true"
 EndSection
+
+Section "ServerFlags"
+    Option "StandbyTime" "5"
+    Option "SuspendTime" "10"
+    #Option "BlankTime" "1"
+EndSection
