Now panel/wibox should not be seen when in full screen mode

--- a/dotfiles/.config/picom/picom.conf
+++ b/dotfiles/.config/picom/picom.conf
@@ -412,3 +412,14 @@ wintypes:
   popup_menu = { opacity = 1; }
   dropdown_menu = { opacity = 1; }
 };
+
+# Don't show panel when showing full screen apps
+# https://www.reddit.com/r/i3wm/comments/g8qw2o/disabling_compositing_for_fullscreen_apps/
+opacity-rule = [
+  "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
+  "100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
+  "100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
+  "100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
+  "100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'"
+];
+
