Moving nvim to dotfiles/.config, currently not using picom, adding themeSwitcher.py (alacritty, git diff (delta), nvim, VSCodium

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -10,24 +10,41 @@
     #plus-color = "#012800"
     #minus-color = "#340001"
     #syntax-theme = Monokai Extended
-    features = my-feature
+
+    #line-numbers = true
+    features = my-feature-theme-dark
+    #features = my-feature-theme-light
+
+    #my-select-theme-start
+    features = my-feature-theme-light
+    #my-select-theme-end
 
 [interactive]
     diffFilter = delta --color-only
 
-[delta "my-feature"]
+[delta "my-feature-theme-dark"]
     # Default colors:
     #   plus:
     #     background = "#012800"
     #   minus:
     #     background = "#340001"
-    #syntax-theme = gruvbox-light
     syntax-theme = gruvbox
     file-style = 'auto bold auto'
     file-decoration-style = '"#b35900" ul ol'
     plus-style = 'syntax "#013300"'
     minus-style = 'syntax "#4d0001"'
-    #line-numbers = true
+
+[delta "my-feature-theme-light"]
+    # Default colors:
+    #   plus:
+    #     background = "#012800"
+    #   minus:
+    #     background = "#340001"
+    syntax-theme = gruvbox-light
+    file-style = 'auto bold auto'
+    file-decoration-style = '"#b35900" ul ol'
+    #plus-style = 'syntax "#013300"'
+    #minus-style = 'syntax "#4d0001"'
 
 [delta "my-feature-side-by-side"]
     # Wide lines in the left or right panel are currently truncated (v0.6.0). If the truncation
