--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "scripts/backupScript"]
 	path = scripts/backupScript
-	url = https://github.com/bzgec/backupScript.git
+	url = git@github.com:bzgec/backupScript.git
 [submodule "wallpapers-collection"]
 	path = wallpapers-collection
-	url = https://github.com/bzgec/wallpapers-collection.git
+	url = git@github.com:bzgec/wallpapers-collection.git
 [submodule "dotfiles/.config/awesome/lain"]
 	path = dotfiles/.config/awesome/lain
-	url = https://github.com/bzgec/lain.git
+	url = git@github.com:bzgec/lain.git
 [submodule "dotfiles/.config/nvim"]
 	path = dotfiles/.config/nvim
-	url = https://github.com/bzgec/nvim.git
+	url = git@github.com:bzgec/nvim.git
 [submodule "dotfiles/.config/alacritty/alacritty-theme"]
 	path = dotfiles/.config/alacritty/alacritty-theme
-	url = https://github.com/eendroroy/alacritty-theme.git
+	url = git@github.com:eendroroy/alacritty-theme.git
