--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 *.h        text eol=lf
 *.py       text eol=lf
 *.md       text eol=lf
+*.adoc     text eol=lf
 *.txt      text eol=lf
 *.csv      text eol=lf
 Makefile   text eol=lf
