optimus-manager: startup_mode=hybrid

--- a/optimus-manager.conf
+++ b/optimus-manager.conf
@@ -43,7 +43,7 @@ auto_logout=yes
 # Possible values: nvidia, integrated, hybrid, auto, intel (deprecated, equivalent to integrated)
 # "auto" is a special mode that auto-detects if the computer is running on battery
 # and selects a proper GPU mode. See the other options below.
-startup_mode=integrated
+startup_mode=hybrid
 # GPU mode to select when startup_mode=auto and the computer is running on battery.
 # Possible values: nvidia, integrated, hybrid, intel (deprecated, equivalent to integrated)
 startup_auto_battery_mode=integrated
