Change terminal tab title (tabTitleSet for custom)

--- a/dotfiles/.config/starship.toml
+++ b/dotfiles/.config/starship.toml
@@ -37,6 +37,11 @@ home_symbol = "~"
 [git_branch]
 
 # A format string representing the symbol of git branch.
-#symbol = " "
-symbol = ""
+symbol = " "
+# symbol = ""
 
+###################################################################################################
+# Hostname
+###################################################################################################
+[hostname]
+ssh_only = true
